# book-shared

./: pyproject.toml  requirements.txt  setup.py
books_shared/protobuf/: account.proto  book.proto  order.proto
books_shared/protopy/: account_pb2.py  account_pb2_grpc.py  book_pb2.py  book_pb2_grpc.py  order_pb2.py  order_pb2_grpc.py
books_shared/utils/: accountConf.cfg  app.py  config.py  mapping.py
controllers/: base_controller.py
models/: base_model.py
protobuf/: book.proto  order.proto
protopy/: account_pb2_grpc.py  book_pb2.py  book_pb2_grpc.py  order_pb2.py  order_pb2_grpc.py
src/models/: base_model.py
src/protobuf/: account.proto
src/protopy/: account_pb2.py  account_pb2_grpc.py  book_pb2_grpc.py  order_pb2_grpc.py
src/utils/: app.py
utils/: config.py
