[tool.poetry]
name = "books-shared"
version = "0.1.0"
description = ""
authors = ["oleksandr.zhukov <oleksandr.zhukov@alertinnovation.com>"]
packages = [
    { include = "utils"},
    { include="protopy"}
]

[tool.poetry.dependencies]
python = "3.8"
grpcio_tools = "1.33.2"
grpcio-reflection = "1.33.2"
python-dotenv = "1.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
