[tool.poetry]
name = "books-shared"
version = "0.3.0"
description = ""
authors = ["oleksandr.zhukov <oleksandr.zhukov@alertinnovation.com>"]
packages = [
    { include = "src"}
]

[tool.poetry.dependencies]
python = ">=3.8, <3.9"
grpcio_tools = "1.33.2"
grpcio-reflection = "1.33.2"
python-dotenv = "1.0.0"
Flask-SQLAlchemy = "3.0.3"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
